load("//tools:gen_maven_jar_rules.bzl", "gen_maven_jar_rules")
load("//tools:jar_jar.bzl", "jar_jar")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

# Maven jars

gen_maven_jar_rules(
    name = "tink",
    doctitle = "Tink Cryptography API",
    root_packages = [
        "com.google.crypto.tink",
    ],
    deps = [
        "//src/main/java/com/google/crypto/tink:aead",
        "//src/main/java/com/google/crypto/tink:binary_keyset_reader",
        "//src/main/java/com/google/crypto/tink:binary_keyset_writer",
        "//src/main/java/com/google/crypto/tink:catalogue",
        "//src/main/java/com/google/crypto/tink:cleartext_keyset_handle",
        "//src/main/java/com/google/crypto/tink:config",
        "//src/main/java/com/google/crypto/tink:core",
        "//src/main/java/com/google/crypto/tink:crypto_format",
        "//src/main/java/com/google/crypto/tink:deterministic_aead",
        "//src/main/java/com/google/crypto/tink:hybrid_decrypt",
        "//src/main/java/com/google/crypto/tink:hybrid_encrypt",
        "//src/main/java/com/google/crypto/tink:json_keyset_reader",
        "//src/main/java/com/google/crypto/tink:json_keyset_writer",
        "//src/main/java/com/google/crypto/tink:key_manager",
        "//src/main/java/com/google/crypto/tink:key_manager_impl",
        "//src/main/java/com/google/crypto/tink:key_template",
        "//src/main/java/com/google/crypto/tink:key_type_manager",
        "//src/main/java/com/google/crypto/tink:key_wrap",
        "//src/main/java/com/google/crypto/tink:keyset_reader",
        "//src/main/java/com/google/crypto/tink:keyset_writer",
        "//src/main/java/com/google/crypto/tink:kms_client",
        "//src/main/java/com/google/crypto/tink:kms_clients",
        "//src/main/java/com/google/crypto/tink:mac",
        "//src/main/java/com/google/crypto/tink:no_secret_keyset_handle",
        "//src/main/java/com/google/crypto/tink:primitive_set",
        "//src/main/java/com/google/crypto/tink:primitive_wrapper",
        "//src/main/java/com/google/crypto/tink:private_key_manager",
        "//src/main/java/com/google/crypto/tink:private_key_manager_impl",
        "//src/main/java/com/google/crypto/tink:private_key_type_manager",
        "//src/main/java/com/google/crypto/tink:public_key_sign",
        "//src/main/java/com/google/crypto/tink:public_key_verify",
        "//src/main/java/com/google/crypto/tink:registry_cluster",
        "//src/main/java/com/google/crypto/tink:streaming_aead",
        "//src/main/java/com/google/crypto/tink:util",
        "//src/main/java/com/google/crypto/tink/aead:aead_factory",
        "//src/main/java/com/google/crypto/tink/aead:aead_key_templates",
        "//src/main/java/com/google/crypto/tink/config:tink_config",
        "//src/main/java/com/google/crypto/tink/daead:deterministic_aead_factory",
        "//src/main/java/com/google/crypto/tink/daead:deterministic_aead_key_templates",
        "//src/main/java/com/google/crypto/tink/hybrid:hybrid_decrypt_config",
        "//src/main/java/com/google/crypto/tink/hybrid:hybrid_decrypt_factory",
        "//src/main/java/com/google/crypto/tink/hybrid:hybrid_encrypt_config",
        "//src/main/java/com/google/crypto/tink/hybrid:hybrid_encrypt_factory",
        "//src/main/java/com/google/crypto/tink/hybrid:hybrid_key_templates",
        "//src/main/java/com/google/crypto/tink/mac:mac_factory",
        "//src/main/java/com/google/crypto/tink/mac:mac_key_templates",
        "//src/main/java/com/google/crypto/tink/signature:public_key_sign_config",
        "//src/main/java/com/google/crypto/tink/signature:public_key_sign_factory",
        "//src/main/java/com/google/crypto/tink/signature:public_key_verify_config",
        "//src/main/java/com/google/crypto/tink/signature:public_key_verify_factory",
        "//src/main/java/com/google/crypto/tink/signature:signature_key_templates",
        "//src/main/java/com/google/crypto/tink/signature:signature_pem_keyset_reader",
        "//src/main/java/com/google/crypto/tink/streamingaead:streaming_aead_factory",
        "//src/main/java/com/google/crypto/tink/streamingaead:streaming_aead_key_templates",
        "//src/main/java/com/google/crypto/tink/subtle:kwp",
        "//src/main/java/com/google/crypto/tink/subtle:x25519",
        "//src/main/java/com/google/crypto/tink/util:keys_downloader",
    ],
)

gen_maven_jar_rules(
    name = "tink-awskms",
    doctitle = "Tink Cryptography API with AWS KMS",
    root_packages = [
        "com.google.crypto.tink",
    ],
    deps = [
        "//src/main/java/com/google/crypto/tink/integration/awskms:aws_kms_aead",
        "//src/main/java/com/google/crypto/tink/integration/awskms:aws_kms_client",
    ],
)

gen_maven_jar_rules(
    name = "tink-gcpkms",
    doctitle = "Tink Cryptography API with Google Cloud KMS",
    root_packages = [
        "com.google.crypto.tink",
    ],
    deps = [
        "//src/main/java/com/google/crypto/tink/integration/gcpkms:gcp_kms_aead",
        "//src/main/java/com/google/crypto/tink/integration/gcpkms:gcp_kms_client",
    ],
)

gen_maven_jar_rules(
    name = "tink-android",
    doctitle = "Tink Cryptography API for Android",
    resources = glob([
        "src/main/resources/**",
    ]),
    root_packages = [
        "com.google.crypto.tink",
        # The following package(s) will be shaded by the "tink-android-shaded" target.
        "com.google.protobuf",
    ],
    deps = [
        "//src/main/java/com/google/crypto/tink:aead",
        "//src/main/java/com/google/crypto/tink:binary_keyset_reader-android",
        "//src/main/java/com/google/crypto/tink:binary_keyset_writer-android",
        "//src/main/java/com/google/crypto/tink:catalogue-android",
        "//src/main/java/com/google/crypto/tink:cleartext_keyset_handle-android",
        "//src/main/java/com/google/crypto/tink:config-android",
        "//src/main/java/com/google/crypto/tink:core-android",
        "//src/main/java/com/google/crypto/tink:crypto_format-android",
        "//src/main/java/com/google/crypto/tink:deterministic_aead",
        "//src/main/java/com/google/crypto/tink:hybrid_decrypt",
        "//src/main/java/com/google/crypto/tink:hybrid_encrypt",
        "//src/main/java/com/google/crypto/tink:json_keyset_reader-android",
        "//src/main/java/com/google/crypto/tink:json_keyset_writer-android",
        "//src/main/java/com/google/crypto/tink:key_manager-android",
        "//src/main/java/com/google/crypto/tink:key_manager_impl-android",
        "//src/main/java/com/google/crypto/tink:key_template-android",
        "//src/main/java/com/google/crypto/tink:key_type_manager-android",
        "//src/main/java/com/google/crypto/tink:key_wrap",
        "//src/main/java/com/google/crypto/tink:keyset_reader-android",
        "//src/main/java/com/google/crypto/tink:keyset_writer-android",
        "//src/main/java/com/google/crypto/tink:kms_client",
        "//src/main/java/com/google/crypto/tink:kms_clients",
        "//src/main/java/com/google/crypto/tink:mac",
        "//src/main/java/com/google/crypto/tink:no_secret_keyset_handle-android",
        "//src/main/java/com/google/crypto/tink:primitive_set-android",
        "//src/main/java/com/google/crypto/tink:primitive_wrapper-android",
        "//src/main/java/com/google/crypto/tink:private_key_manager-android",
        "//src/main/java/com/google/crypto/tink:private_key_manager_impl-android",
        "//src/main/java/com/google/crypto/tink:private_key_type_manager-android",
        "//src/main/java/com/google/crypto/tink:public_key_sign",
        "//src/main/java/com/google/crypto/tink:public_key_verify",
        "//src/main/java/com/google/crypto/tink:registry_cluster-android",
        "//src/main/java/com/google/crypto/tink:streaming_aead",
        "//src/main/java/com/google/crypto/tink:util-android",
        "//src/main/java/com/google/crypto/tink/aead:aead_factory-android",
        "//src/main/java/com/google/crypto/tink/aead:aead_key_templates-android",
        "//src/main/java/com/google/crypto/tink/config:tink_config-android",
        "//src/main/java/com/google/crypto/tink/daead:deterministic_aead_factory-android",
        "//src/main/java/com/google/crypto/tink/daead:deterministic_aead_key_templates-android",
        "//src/main/java/com/google/crypto/tink/hybrid:hybrid_decrypt_config-android",
        "//src/main/java/com/google/crypto/tink/hybrid:hybrid_decrypt_factory-android",
        "//src/main/java/com/google/crypto/tink/hybrid:hybrid_encrypt_config-android",
        "//src/main/java/com/google/crypto/tink/hybrid:hybrid_encrypt_factory-android",
        "//src/main/java/com/google/crypto/tink/hybrid:hybrid_key_templates-android",
        "//src/main/java/com/google/crypto/tink/integration/android:android_keyset_manager",
        "//src/main/java/com/google/crypto/tink/integration/android:android_keystore_aes_gcm",
        "//src/main/java/com/google/crypto/tink/integration/android:android_keystore_kms_client",
        "//src/main/java/com/google/crypto/tink/mac:mac_factory-android",
        "//src/main/java/com/google/crypto/tink/mac:mac_key_templates-android",
        "//src/main/java/com/google/crypto/tink/signature:public_key_sign_config-android",
        "//src/main/java/com/google/crypto/tink/signature:public_key_sign_factory-android",
        "//src/main/java/com/google/crypto/tink/signature:public_key_verify_config-android",
        "//src/main/java/com/google/crypto/tink/signature:public_key_verify_factory-android",
        "//src/main/java/com/google/crypto/tink/signature:signature_key_templates-android",
        "//src/main/java/com/google/crypto/tink/signature:signature_pem_keyset_reader-android",
        "//src/main/java/com/google/crypto/tink/streamingaead:streaming_aead_factory-android",
        "//src/main/java/com/google/crypto/tink/streamingaead:streaming_aead_key_templates-android",
        "//src/main/java/com/google/crypto/tink/subtle:kwp",
        "//src/main/java/com/google/crypto/tink/subtle:x25519",
    ],
)

# Shade embedded packages to avoid dependency version conflicts in user projects.
jar_jar(
    name = "tink-android-shaded",
    input_jar = ":tink-android",
    rules = "jar_jar_rules.txt",
)
