load("//tools:gen_maven_jar_rules.bzl", "gen_maven_jar_rules")
load("@tink_base//tools:common.bzl", "check_deps")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["BUILD"])

# Maven jars.
# DO NOT USE FOR ANY OTHER PURPOSES.

gen_maven_jar_rules(
    name = "tink",
    doctitle = "Tink Cryptography API",
    manifest_lines = [
        "Automatic-Module-Name: com.google.crypto.tink",
    ],
    root_packages = [
        "com.google.crypto.tink",
    ],
    deps = [
        "//src/main/java/com/google/crypto/tink:aead",
        "//src/main/java/com/google/crypto/tink:binary_keyset_reader",
        "//src/main/java/com/google/crypto/tink:binary_keyset_writer",
        "//src/main/java/com/google/crypto/tink:catalogue",
        "//src/main/java/com/google/crypto/tink:cleartext_keyset_handle",
        "//src/main/java/com/google/crypto/tink:config",
        "//src/main/java/com/google/crypto/tink:crypto_format",
        "//src/main/java/com/google/crypto/tink:deterministic_aead",
        "//src/main/java/com/google/crypto/tink:hybrid_decrypt",
        "//src/main/java/com/google/crypto/tink:hybrid_encrypt",
        "//src/main/java/com/google/crypto/tink:json_keyset_reader",
        "//src/main/java/com/google/crypto/tink:json_keyset_writer",
        "//src/main/java/com/google/crypto/tink:key_manager",
        "//src/main/java/com/google/crypto/tink:key_manager_impl",
        "//src/main/java/com/google/crypto/tink:key_template",
        "//src/main/java/com/google/crypto/tink:key_templates",
        "//src/main/java/com/google/crypto/tink:key_wrap",
        "//src/main/java/com/google/crypto/tink:keyset_reader",
        "//src/main/java/com/google/crypto/tink:keyset_writer",
        "//src/main/java/com/google/crypto/tink:kms_client",
        "//src/main/java/com/google/crypto/tink:kms_clients",
        "//src/main/java/com/google/crypto/tink:mac",
        "//src/main/java/com/google/crypto/tink:no_secret_keyset_handle",
        "//src/main/java/com/google/crypto/tink:primitive_set",
        "//src/main/java/com/google/crypto/tink:primitive_wrapper",
        "//src/main/java/com/google/crypto/tink:private_key_manager",
        "//src/main/java/com/google/crypto/tink:private_key_manager_impl",
        "//src/main/java/com/google/crypto/tink:public_key_sign",
        "//src/main/java/com/google/crypto/tink:public_key_verify",
        "//src/main/java/com/google/crypto/tink:registry_cluster",
        "//src/main/java/com/google/crypto/tink:streaming_aead",
        "//src/main/java/com/google/crypto/tink:util",
        "//src/main/java/com/google/crypto/tink:version",
        "//src/main/java/com/google/crypto/tink/aead:aead_config",
        "//src/main/java/com/google/crypto/tink/aead:aead_key_templates",
        "//src/main/java/com/google/crypto/tink/aead:aead_wrapper",
        "//src/main/java/com/google/crypto/tink/aead:aes_ctr_hmac_aead_key_manager",
        "//src/main/java/com/google/crypto/tink/aead:aes_ctr_key_manager",
        "//src/main/java/com/google/crypto/tink/aead:aes_eax_key_manager",
        "//src/main/java/com/google/crypto/tink/aead:aes_gcm_key_manager",
        "//src/main/java/com/google/crypto/tink/aead:aes_gcm_siv_key_manager",
        "//src/main/java/com/google/crypto/tink/aead:cha_cha20_poly1305_key_manager",
        "//src/main/java/com/google/crypto/tink/aead:kms_aead_key_manager",
        "//src/main/java/com/google/crypto/tink/aead:kms_envelope_aead_key_manager",
        "//src/main/java/com/google/crypto/tink/aead:x_cha_cha20_poly1305_key_manager",
        "//src/main/java/com/google/crypto/tink/aead/subtle:aead_factory",
        "//src/main/java/com/google/crypto/tink/aead/subtle:aes_gcm_factory",
        "//src/main/java/com/google/crypto/tink/aead/subtle:aes_gcm_siv",
        "//src/main/java/com/google/crypto/tink/config:tink_config",
        "//src/main/java/com/google/crypto/tink/daead:aes_siv_key_manager",
        "//src/main/java/com/google/crypto/tink/daead:deterministic_aead_config",
        "//src/main/java/com/google/crypto/tink/daead:deterministic_aead_factory",
        "//src/main/java/com/google/crypto/tink/daead:deterministic_aead_key_templates",
        "//src/main/java/com/google/crypto/tink/daead:deterministic_aead_wrapper",
        "//src/main/java/com/google/crypto/tink/hybrid:ecies_aead_hkdf_private_key_manager",
        "//src/main/java/com/google/crypto/tink/hybrid:ecies_aead_hkdf_public_key_manager",
        "//src/main/java/com/google/crypto/tink/hybrid:hybrid_config",
        "//src/main/java/com/google/crypto/tink/hybrid:hybrid_decrypt_factory",
        "//src/main/java/com/google/crypto/tink/hybrid:hybrid_decrypt_wrapper",
        "//src/main/java/com/google/crypto/tink/hybrid:hybrid_encrypt_factory",
        "//src/main/java/com/google/crypto/tink/hybrid:hybrid_encrypt_wrapper",
        "//src/main/java/com/google/crypto/tink/hybrid:hybrid_key_templates",
        "//src/main/java/com/google/crypto/tink/hybrid:hybrid_util",
        "//src/main/java/com/google/crypto/tink/hybrid:registry_ecies_aead_hkdf_dem_helper",
        "//src/main/java/com/google/crypto/tink/hybrid/subtle:rsa_kem",
        "//src/main/java/com/google/crypto/tink/hybrid/subtle:rsa_kem_hybrid_decrypt",
        "//src/main/java/com/google/crypto/tink/hybrid/subtle:rsa_kem_hybrid_encrypt",
        "//src/main/java/com/google/crypto/tink/internal:key_type_manager",
        "//src/main/java/com/google/crypto/tink/internal:private_key_type_manager",
        "//src/main/java/com/google/crypto/tink/mac:aes_cmac_key_manager",
        "//src/main/java/com/google/crypto/tink/mac:hmac_key_manager",
        "//src/main/java/com/google/crypto/tink/mac:mac_config",
        "//src/main/java/com/google/crypto/tink/mac:mac_factory",
        "//src/main/java/com/google/crypto/tink/mac:mac_key_templates",
        "//src/main/java/com/google/crypto/tink/mac:mac_wrapper",
        "//src/main/java/com/google/crypto/tink/prf:aes_cmac_prf_key_manager",
        "//src/main/java/com/google/crypto/tink/prf:hkdf_prf_key_manager",
        "//src/main/java/com/google/crypto/tink/prf:prf_config",
        "//src/main/java/com/google/crypto/tink/prf:prf_key_templates",
        "//src/main/java/com/google/crypto/tink/prf:prf_set",
        "//src/main/java/com/google/crypto/tink/prf:prf_set_wrapper",
        "//src/main/java/com/google/crypto/tink/signature:ecdsa_sign_key_manager",
        "//src/main/java/com/google/crypto/tink/signature:ecdsa_verify_key_manager",
        "//src/main/java/com/google/crypto/tink/signature:ed25519_private_key_manager",
        "//src/main/java/com/google/crypto/tink/signature:ed25519_public_key_manager",
        "//src/main/java/com/google/crypto/tink/signature:public_key_sign_factory",
        "//src/main/java/com/google/crypto/tink/signature:public_key_sign_wrapper",
        "//src/main/java/com/google/crypto/tink/signature:public_key_verify_factory",
        "//src/main/java/com/google/crypto/tink/signature:public_key_verify_wrapper",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pkcs1_sign_key_manager",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pkcs1_verify_key_manager",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pss_sign_key_manager",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pss_verify_key_manager",
        "//src/main/java/com/google/crypto/tink/signature:signature_config",
        "//src/main/java/com/google/crypto/tink/signature:signature_key_templates",
        "//src/main/java/com/google/crypto/tink/signature:signature_pem_keyset_reader",
        "//src/main/java/com/google/crypto/tink/signature/internal:sig_util",
        "//src/main/java/com/google/crypto/tink/streamingaead:aes_ctr_hmac_streaming_key_manager",
        "//src/main/java/com/google/crypto/tink/streamingaead:aes_gcm_hkdf_streaming_key_manager",
        "//src/main/java/com/google/crypto/tink/streamingaead:streaming_aead_config",
        "//src/main/java/com/google/crypto/tink/streamingaead:streaming_aead_factory",
        "//src/main/java/com/google/crypto/tink/streamingaead:streaming_aead_key_templates",
        "//src/main/java/com/google/crypto/tink/streamingaead:streaming_aead_util",
        "//src/main/java/com/google/crypto/tink/streamingaead:streaming_aead_wrapper",
        "//src/main/java/com/google/crypto/tink/subtle:aes_ctr_hmac_streaming",
        "//src/main/java/com/google/crypto/tink/subtle:aes_ctr_jce_cipher",
        "//src/main/java/com/google/crypto/tink/subtle:aes_eax_jce",
        "//src/main/java/com/google/crypto/tink/subtle:aes_gcm_hkdf_streaming",
        "//src/main/java/com/google/crypto/tink/subtle:aes_gcm_jce",
        "//src/main/java/com/google/crypto/tink/subtle:aes_siv",
        "//src/main/java/com/google/crypto/tink/subtle:aes_util",
        "//src/main/java/com/google/crypto/tink/subtle:bytes",
        "//src/main/java/com/google/crypto/tink/subtle:cha_cha20",
        "//src/main/java/com/google/crypto/tink/subtle:cha_cha20_poly1305",
        "//src/main/java/com/google/crypto/tink/subtle:ecdsa_sign_jce",
        "//src/main/java/com/google/crypto/tink/subtle:ecdsa_verify_jce",
        "//src/main/java/com/google/crypto/tink/subtle:ecies_aead_hkdf_dem_helper",
        "//src/main/java/com/google/crypto/tink/subtle:ecies_aead_hkdf_hybrid_decrypt",
        "//src/main/java/com/google/crypto/tink/subtle:ecies_aead_hkdf_hybrid_encrypt",
        "//src/main/java/com/google/crypto/tink/subtle:ed25519_cluster",
        "//src/main/java/com/google/crypto/tink/subtle:ed25519_sign",
        "//src/main/java/com/google/crypto/tink/subtle:ed25519_verify",
        "//src/main/java/com/google/crypto/tink/subtle:elliptic_curves",
        "//src/main/java/com/google/crypto/tink/subtle:encrypt_then_authenticate",
        "//src/main/java/com/google/crypto/tink/subtle:enums",
        "//src/main/java/com/google/crypto/tink/subtle:field25519",
        "//src/main/java/com/google/crypto/tink/subtle:hex",
        "//src/main/java/com/google/crypto/tink/subtle:hkdf",
        "//src/main/java/com/google/crypto/tink/subtle:immutable_byte_array",
        "//src/main/java/com/google/crypto/tink/subtle:ind_cpa_cipher",
        "//src/main/java/com/google/crypto/tink/subtle:kwp",
        "//src/main/java/com/google/crypto/tink/subtle:pem_key_type",
        "//src/main/java/com/google/crypto/tink/subtle:poly1305",
        "//src/main/java/com/google/crypto/tink/subtle:prf_aes_cmac",
        "//src/main/java/com/google/crypto/tink/subtle:prf_hmac_jce",
        "//src/main/java/com/google/crypto/tink/subtle:prf_mac",
        "//src/main/java/com/google/crypto/tink/subtle:random",
        "//src/main/java/com/google/crypto/tink/subtle:rewindable_readable_byte_channel",
        "//src/main/java/com/google/crypto/tink/subtle:rsa_ssa_pkcs1_sign_jce",
        "//src/main/java/com/google/crypto/tink/subtle:rsa_ssa_pkcs1_verify_jce",
        "//src/main/java/com/google/crypto/tink/subtle:rsa_ssa_pss_sign_jce",
        "//src/main/java/com/google/crypto/tink/subtle:rsa_ssa_pss_verify_jce",
        "//src/main/java/com/google/crypto/tink/subtle:subtle_util_cluster",
        "//src/main/java/com/google/crypto/tink/subtle:validators",
        "//src/main/java/com/google/crypto/tink/subtle:x25519",
        "//src/main/java/com/google/crypto/tink/subtle:x_cha_cha20",
        "//src/main/java/com/google/crypto/tink/subtle:x_cha_cha20_poly1305",
        "//src/main/java/com/google/crypto/tink/subtle/prf:hkdf_streaming_prf",
        "//src/main/java/com/google/crypto/tink/subtle/prf:prf_impl",
        "//src/main/java/com/google/crypto/tink/subtle/prf:streaming_prf",
        "//src/main/java/com/google/crypto/tink/util:keys_downloader",
    ],
)

gen_maven_jar_rules(
    name = "tink-android",
    doctitle = "Tink Cryptography API for Android",
    resources = glob([
        "src/main/resources/**",
    ]),
    root_packages = [
        "com.google.crypto.tink",
    ],
    shaded_packages = [
        # The following package(s) will be shaded, according to the rules
        # specified in shading_rules.
        "com.google.protobuf",
    ],
    shading_rules = "jar_jar_rules.txt",
    deps = [
        "//src/main/java/com/google/crypto/tink:aead",
        "//src/main/java/com/google/crypto/tink:binary_keyset_reader-android",
        "//src/main/java/com/google/crypto/tink:binary_keyset_writer-android",
        "//src/main/java/com/google/crypto/tink:catalogue-android",
        "//src/main/java/com/google/crypto/tink:cleartext_keyset_handle-android",
        "//src/main/java/com/google/crypto/tink:config-android",
        "//src/main/java/com/google/crypto/tink:crypto_format-android",
        "//src/main/java/com/google/crypto/tink:deterministic_aead",
        "//src/main/java/com/google/crypto/tink:hybrid_decrypt",
        "//src/main/java/com/google/crypto/tink:hybrid_encrypt",
        "//src/main/java/com/google/crypto/tink:json_keyset_reader-android",
        "//src/main/java/com/google/crypto/tink:json_keyset_writer-android",
        "//src/main/java/com/google/crypto/tink:key_manager-android",
        "//src/main/java/com/google/crypto/tink:key_manager_impl-android",
        "//src/main/java/com/google/crypto/tink:key_template-android",
        "//src/main/java/com/google/crypto/tink:key_templates-android",
        "//src/main/java/com/google/crypto/tink:key_wrap",
        "//src/main/java/com/google/crypto/tink:keyset_reader-android",
        "//src/main/java/com/google/crypto/tink:keyset_writer-android",
        "//src/main/java/com/google/crypto/tink:kms_client",
        "//src/main/java/com/google/crypto/tink:kms_clients",
        "//src/main/java/com/google/crypto/tink:mac",
        "//src/main/java/com/google/crypto/tink:no_secret_keyset_handle-android",
        "//src/main/java/com/google/crypto/tink:primitive_set-android",
        "//src/main/java/com/google/crypto/tink:primitive_wrapper-android",
        "//src/main/java/com/google/crypto/tink:private_key_manager-android",
        "//src/main/java/com/google/crypto/tink:private_key_manager_impl-android",
        "//src/main/java/com/google/crypto/tink:public_key_sign",
        "//src/main/java/com/google/crypto/tink:public_key_verify",
        "//src/main/java/com/google/crypto/tink:registry_cluster-android",
        "//src/main/java/com/google/crypto/tink:streaming_aead",
        "//src/main/java/com/google/crypto/tink:util-android",
        "//src/main/java/com/google/crypto/tink:version",
        "//src/main/java/com/google/crypto/tink/aead:aead_config-android",
        "//src/main/java/com/google/crypto/tink/aead:aead_key_templates-android",
        "//src/main/java/com/google/crypto/tink/aead:aead_wrapper-android",
        "//src/main/java/com/google/crypto/tink/aead:aes_ctr_hmac_aead_key_manager-android",
        "//src/main/java/com/google/crypto/tink/aead:aes_ctr_key_manager-android",
        "//src/main/java/com/google/crypto/tink/aead:aes_eax_key_manager-android",
        "//src/main/java/com/google/crypto/tink/aead:aes_gcm_key_manager-android",
        "//src/main/java/com/google/crypto/tink/aead:aes_gcm_siv_key_manager-android",
        "//src/main/java/com/google/crypto/tink/aead:cha_cha20_poly1305_key_manager-android",
        "//src/main/java/com/google/crypto/tink/aead:kms_aead_key_manager-android",
        "//src/main/java/com/google/crypto/tink/aead:kms_envelope_aead_key_manager-android",
        "//src/main/java/com/google/crypto/tink/aead:x_cha_cha20_poly1305_key_manager-android",
        "//src/main/java/com/google/crypto/tink/aead/subtle:aead_factory",
        "//src/main/java/com/google/crypto/tink/aead/subtle:aes_gcm_factory",
        "//src/main/java/com/google/crypto/tink/aead/subtle:aes_gcm_siv",
        "//src/main/java/com/google/crypto/tink/config:tink_config-android",
        "//src/main/java/com/google/crypto/tink/daead:aes_siv_key_manager-android",
        "//src/main/java/com/google/crypto/tink/daead:deterministic_aead_config-android",
        "//src/main/java/com/google/crypto/tink/daead:deterministic_aead_factory-android",
        "//src/main/java/com/google/crypto/tink/daead:deterministic_aead_key_templates-android",
        "//src/main/java/com/google/crypto/tink/daead:deterministic_aead_wrapper-android",
        "//src/main/java/com/google/crypto/tink/hybrid:ecies_aead_hkdf_private_key_manager-android",
        "//src/main/java/com/google/crypto/tink/hybrid:ecies_aead_hkdf_public_key_manager-android",
        "//src/main/java/com/google/crypto/tink/hybrid:hybrid_config-android",
        "//src/main/java/com/google/crypto/tink/hybrid:hybrid_decrypt_factory-android",
        "//src/main/java/com/google/crypto/tink/hybrid:hybrid_decrypt_wrapper-android",
        "//src/main/java/com/google/crypto/tink/hybrid:hybrid_encrypt_factory-android",
        "//src/main/java/com/google/crypto/tink/hybrid:hybrid_encrypt_wrapper-android",
        "//src/main/java/com/google/crypto/tink/hybrid:hybrid_key_templates-android",
        "//src/main/java/com/google/crypto/tink/hybrid:hybrid_util-android",
        "//src/main/java/com/google/crypto/tink/hybrid:registry_ecies_aead_hkdf_dem_helper-android",
        "//src/main/java/com/google/crypto/tink/hybrid/subtle:rsa_kem",
        "//src/main/java/com/google/crypto/tink/hybrid/subtle:rsa_kem_hybrid_decrypt",
        "//src/main/java/com/google/crypto/tink/hybrid/subtle:rsa_kem_hybrid_encrypt",
        "//src/main/java/com/google/crypto/tink/integration/android:android_keyset_manager",
        "//src/main/java/com/google/crypto/tink/integration/android:android_keystore_aes_gcm",
        "//src/main/java/com/google/crypto/tink/integration/android:android_keystore_kms_client",
        "//src/main/java/com/google/crypto/tink/integration/android:shared_pref_keyset_reader",
        "//src/main/java/com/google/crypto/tink/integration/android:shared_pref_keyset_writer",
        "//src/main/java/com/google/crypto/tink/internal:key_type_manager-android",
        "//src/main/java/com/google/crypto/tink/internal:private_key_type_manager-android",
        "//src/main/java/com/google/crypto/tink/mac:aes_cmac_key_manager-android",
        "//src/main/java/com/google/crypto/tink/mac:hmac_key_manager-android",
        "//src/main/java/com/google/crypto/tink/mac:mac_config-android",
        "//src/main/java/com/google/crypto/tink/mac:mac_factory-android",
        "//src/main/java/com/google/crypto/tink/mac:mac_key_templates-android",
        "//src/main/java/com/google/crypto/tink/mac:mac_wrapper-android",
        "//src/main/java/com/google/crypto/tink/prf:aes_cmac_prf_key_manager-android",
        "//src/main/java/com/google/crypto/tink/prf:hkdf_prf_key_manager-android",
        "//src/main/java/com/google/crypto/tink/prf:prf_config-android",
        "//src/main/java/com/google/crypto/tink/prf:prf_key_templates-android",
        "//src/main/java/com/google/crypto/tink/prf:prf_set",
        "//src/main/java/com/google/crypto/tink/prf:prf_set_wrapper-android",
        "//src/main/java/com/google/crypto/tink/signature:ecdsa_sign_key_manager-android",
        "//src/main/java/com/google/crypto/tink/signature:ecdsa_verify_key_manager-android",
        "//src/main/java/com/google/crypto/tink/signature:ed25519_private_key_manager-android",
        "//src/main/java/com/google/crypto/tink/signature:ed25519_public_key_manager-android",
        "//src/main/java/com/google/crypto/tink/signature:public_key_sign_factory-android",
        "//src/main/java/com/google/crypto/tink/signature:public_key_sign_wrapper-android",
        "//src/main/java/com/google/crypto/tink/signature:public_key_verify_factory-android",
        "//src/main/java/com/google/crypto/tink/signature:public_key_verify_wrapper-android",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pkcs1_sign_key_manager-android",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pkcs1_verify_key_manager-android",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pss_sign_key_manager-android",
        "//src/main/java/com/google/crypto/tink/signature:rsa_ssa_pss_verify_key_manager-android",
        "//src/main/java/com/google/crypto/tink/signature:signature_config-android",
        "//src/main/java/com/google/crypto/tink/signature:signature_key_templates-android",
        "//src/main/java/com/google/crypto/tink/signature:signature_pem_keyset_reader-android",
        "//src/main/java/com/google/crypto/tink/signature/internal:sig_util-android",
        "//src/main/java/com/google/crypto/tink/streamingaead:aes_ctr_hmac_streaming_key_manager-android",
        "//src/main/java/com/google/crypto/tink/streamingaead:aes_gcm_hkdf_streaming_key_manager-android",
        "//src/main/java/com/google/crypto/tink/streamingaead:streaming_aead_config-android",
        "//src/main/java/com/google/crypto/tink/streamingaead:streaming_aead_factory-android",
        "//src/main/java/com/google/crypto/tink/streamingaead:streaming_aead_key_templates-android",
        "//src/main/java/com/google/crypto/tink/streamingaead:streaming_aead_util-android",
        "//src/main/java/com/google/crypto/tink/streamingaead:streaming_aead_wrapper-android",
        "//src/main/java/com/google/crypto/tink/subtle:aes_ctr_hmac_streaming",
        "//src/main/java/com/google/crypto/tink/subtle:aes_ctr_jce_cipher",
        "//src/main/java/com/google/crypto/tink/subtle:aes_eax_jce",
        "//src/main/java/com/google/crypto/tink/subtle:aes_gcm_hkdf_streaming",
        "//src/main/java/com/google/crypto/tink/subtle:aes_gcm_jce",
        "//src/main/java/com/google/crypto/tink/subtle:aes_siv",
        "//src/main/java/com/google/crypto/tink/subtle:aes_util",
        "//src/main/java/com/google/crypto/tink/subtle:bytes",
        "//src/main/java/com/google/crypto/tink/subtle:cha_cha20",
        "//src/main/java/com/google/crypto/tink/subtle:cha_cha20_poly1305",
        "//src/main/java/com/google/crypto/tink/subtle:ecdsa_sign_jce",
        "//src/main/java/com/google/crypto/tink/subtle:ecdsa_verify_jce",
        "//src/main/java/com/google/crypto/tink/subtle:ecies_aead_hkdf_dem_helper",
        "//src/main/java/com/google/crypto/tink/subtle:ecies_aead_hkdf_hybrid_decrypt",
        "//src/main/java/com/google/crypto/tink/subtle:ecies_aead_hkdf_hybrid_encrypt",
        "//src/main/java/com/google/crypto/tink/subtle:ed25519_cluster",
        "//src/main/java/com/google/crypto/tink/subtle:ed25519_sign",
        "//src/main/java/com/google/crypto/tink/subtle:ed25519_verify",
        "//src/main/java/com/google/crypto/tink/subtle:elliptic_curves",
        "//src/main/java/com/google/crypto/tink/subtle:encrypt_then_authenticate",
        "//src/main/java/com/google/crypto/tink/subtle:enums",
        "//src/main/java/com/google/crypto/tink/subtle:field25519",
        "//src/main/java/com/google/crypto/tink/subtle:hex",
        "//src/main/java/com/google/crypto/tink/subtle:hkdf",
        "//src/main/java/com/google/crypto/tink/subtle:immutable_byte_array",
        "//src/main/java/com/google/crypto/tink/subtle:ind_cpa_cipher",
        "//src/main/java/com/google/crypto/tink/subtle:kwp",
        "//src/main/java/com/google/crypto/tink/subtle:pem_key_type",
        "//src/main/java/com/google/crypto/tink/subtle:poly1305",
        "//src/main/java/com/google/crypto/tink/subtle:prf_aes_cmac",
        "//src/main/java/com/google/crypto/tink/subtle:prf_hmac_jce",
        "//src/main/java/com/google/crypto/tink/subtle:prf_mac",
        "//src/main/java/com/google/crypto/tink/subtle:random",
        "//src/main/java/com/google/crypto/tink/subtle:rewindable_readable_byte_channel",
        "//src/main/java/com/google/crypto/tink/subtle:rsa_ssa_pkcs1_sign_jce",
        "//src/main/java/com/google/crypto/tink/subtle:rsa_ssa_pkcs1_verify_jce",
        "//src/main/java/com/google/crypto/tink/subtle:rsa_ssa_pss_sign_jce",
        "//src/main/java/com/google/crypto/tink/subtle:rsa_ssa_pss_verify_jce",
        "//src/main/java/com/google/crypto/tink/subtle:subtle_util_cluster",
        "//src/main/java/com/google/crypto/tink/subtle:validators",
        "//src/main/java/com/google/crypto/tink/subtle:x25519",
        "//src/main/java/com/google/crypto/tink/subtle:x_cha_cha20",
        "//src/main/java/com/google/crypto/tink/subtle:x_cha_cha20_poly1305",
        "//src/main/java/com/google/crypto/tink/subtle/prf:hkdf_streaming_prf",
        "//src/main/java/com/google/crypto/tink/subtle/prf:prf_impl",
        "//src/main/java/com/google/crypto/tink/subtle/prf:streaming_prf",
    ],
)

gen_maven_jar_rules(
    name = "tink-awskms",
    doctitle = "Tink Cryptography API with AWS KMS",
    manifest_lines = [
        "Automatic-Module-Name: com.google.crypto.tink.integration.awskms",
    ],
    root_packages = [
        "com.google.crypto.tink",
    ],
    deps = [
        "//src/main/java/com/google/crypto/tink/integration/awskms:aws_kms_aead",
        "//src/main/java/com/google/crypto/tink/integration/awskms:aws_kms_client",
    ],
)

gen_maven_jar_rules(
    name = "tink-gcpkms",
    doctitle = "Tink Cryptography API with Google Cloud KMS",
    manifest_lines = [
        "Automatic-Module-Name: com.google.crypto.tink.integration.gcpkms",
    ],
    root_packages = [
        "com.google.crypto.tink",
    ],
    deps = [
        "//src/main/java/com/google/crypto/tink/integration/gcpkms:gcp_kms_aead",
        "//src/main/java/com/google/crypto/tink/integration/gcpkms:gcp_kms_client",
    ],
)

# Check that tink-android depends on protobuf-lite, not the full version.
check_deps(
    name = "tink-android-dep-checks",
    disallowed_deps = ["@com_google_protobuf//java/core:core"],
    required_deps = ["@com_google_protobuf//java/lite:lite"],
    deps = [":tink-android-unshaded"],
)
